# course22

./: .gitignore  00-is-it-a-bird-creating-a-model-from-your-own-data.ipynb  00-is-it-a-bird-creating-a-model-from-your-own-data.py  00X-man-female.ipynb  01-jupyter-notebook-101.ipynb  02-saving-a-basic-fastai-model.ipynb  03-which-image-models-are-best.ipynb  04-How-NNs-work-from-scratch.ipynb  04-how-does-a-neural-net-really-work.ipynb  05-linear-model-and-neural-net-from-scratch.ipynb  06-why-you-should-use-a-framework.ipynb  07-how-random-forests-really-work.ipynb  08-first-steps-road-to-the-top-part-1.ipynb  09-small-models-road-to-the-top-part-2.ipynb  10-scaling-up-road-to-the-top-part-3.ipynb  Makefile  README.md  basic_clean_notebooks.py  birds.ipynb  clean.py  czech-pastries-classifier.ipynb  flights-lstm.ipynb  getting-started-with-codespaces.md  nlp-intro.ipynb  pyproject.toml  rise.css  titanic.xlsx
.devcontainer/: Dockerfile  devcontainer.json  install-dev-tools.sh  requirements.txt  tasks.json  welcome-message.txt
.devcontainerCPU/: README.md  devcontainer.json  welcome-message.txt
.devcontainerCUDA/: Dockerfile  DockerfileGPU  install-dev-tools.sh  requirements.txt  welcome-message.txt
.devcontainerCodespaces/: devcontainer.json  welcome-message.txt
.devcontainerGPU/: Dockerfile  README.md  devcontainer.json  install-dev-tools.sh  welcome-message.txt
.devcontainerNvidiaCPU/: DockerfileGPU  devcontainer.json
00/: 00-is-it-a-bird-creating-a-model-from-your-own-data.ipynb
01/: 01-jupyter-notebook-101.ipynb
02/: 02-saving-a-basic-fastai-model.ipynb
03/: 04-how-does-a-neural-net-really-work.ipynb  (+2 more)
envs/include/gstreamer-1.0/gst/gl/glprototypes/: Makefile.am  README  all_functions.h  gstgl_gles2compat.h  sync.h
(+1780 files in other folders)
