prototypedir = $(includedir)/gstreamer-@GST_API_VERSION@/gst/gl/glprototypes

prototype_HEADERS = \
	all_functions.h \
	base.h \
	blending.h \
	eglimage.h \
	fbo.h \
	fixedfunction.h \
	gles.h \
	opengl.h \
	shaders.h \
	gstgl_compat.h \
	gstgl_gles2compat.h \
	debug.h \
	vao.h \
	sync.h \
	buffers.h \
	query.h

